# Engineering-practices-ml

./: .pre-commit-config.yaml  README.md  dvc.yaml  linting.md  notebook.ipynb  pyproject.toml  requirements.txt
.dvc/: config
decision-tree-classifier/: __init__.py  dvc.yaml  fit.py  main.py  predict.py  train_blobs.py  train_blobs_hard.py  train_moons.py  validate_blobs.py  validate_blobs_hard.py  validate_moons.py
decision-tree-classifier/data/: preprocessing.py
decision-tree-classifier/data/dataset/: train.csv.dvc
decision-tree-classifier/data/model/: .gitignore  model.pkl.dvc  tree_blobs.pkl.dvc  tree_blobs_hard.pkl.dvc  tree_moons.pkl.dvc
decision-tree-classifier/evaluation/: params.yaml  report.html
decision-tree-classifier/evaluation/plots/metrics/: accuracy.tsv
decision-tree-classifier/src/: __init__.py  decision_tree.py  decision_tree_classifier.py  predicate.py  visualization.py
src/: decision_tree.py  visualization.py
