[tool.poetry]
name = "decision-tree-classifier"
version = "0.1.0"
description = ""
authors = ["Ilya Smirnov"]
readme = "README.md"
packages = [{include = "decision-tree-classifier"}]

[tool.poetry.group.dev.dependencies]
PyQt5 = "5.15.7"

[tool.poetry.group.prod.dependencies]
python = "^3.8"
matplotlib = "3.6.2"
numpy = "1.23.5"
pandas = "1.5.1"
scikit-learn = "1.1.3"
scipy = "1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
