[tool.poetry]
name = "hse-decision-tree-classifier"
version = "0.1.2"
description = ""
authors = ["Ilya Smirnov"]
readme = "README.md"
packages = [{include = "decision-tree-classifier"}]

[tool.poetry.group.dev.dependencies]
PyQt5 = "5.15.7"
matplotlib = "3.6.2"
black = "22.10.0"
isort = "5.10.1"
flake8 = "5.0.4"
flake8-simplify = "0.19.3"
flake8-return = "1.2.0"
pep8-naming = "0.13.2"
flake8-variables-names = "0.0.2"
flake8-docstrings = "1.6.0"
flake8-quotes = "3.3.1"
pre-commit = "2.20.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.5"
pandas = "1.5.1"
scikit-learn = "1.1.3"
scipy = "1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
